# routes/Api.routes.js
@@ -5,16 +5,19 @@ const authenticateToken = require("../middleware/auth");
 const upload = require('../middleware/uploadMiddleware');
 
 const { registerUser, loginUser } = require("@controllers/Auth.Controller");
-const { getresult, uploadData, getUserProfile } = require("@controllers/Core.Controller");
+const { getresult, uploadData } = require("@controllers/Core.Controller");
+const { getUserProfile, updateUserProfile } = require("@controllers/User.Controller");
 
 // Authentication routes
 router.post("/user/register", registerUser)
 router.post("/user/login", loginUser)
-router.post("/user/edit")
+
+// User Routes
+router.post("/user/edit", authenticateToken, updateUserProfile)
+router.get("/user/profile", authenticateToken, getUserProfile)
 
 
 // Core Functionality routes
-router.get("/user/profile", authenticateToken, getUserProfile)
 router.post("/chat", getresult)
 router.post("/upload", authenticateToken, upload.single('file'), uploadData)
 
